# picobrokerTLS

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/GatoMQTT/: Cargo.toml  README.md
crates/GatoMQTT/src/: config.rs  lib.rs  slot.rs
crates/GatoMQTT/src/handler/: connection.rs  publish.rs  subscribe.rs
crates/GatoMQTT/src/router/: retained.rs  subscriptions.rs
crates/GatoMQTT/src/session/: mod.rs  registry.rs
crates/GatoMQTT/src/tls/: embedded_tls_psk.rs  mod.rs
crates/GatoMQTT/src/transport/: mod.rs  tls.rs
crates/GatoMQTT/tests/: zero_init_registry.rs
crates/smartbox-config/: Cargo.toml  README.md
crates/smartbox-config/src/: active_slot.rs  compiler.rs  ids.rs  lib.rs  manager.rs  pipeline.rs  schema.rs  serialization.rs  storage.rs
docs/: ARCHITECTURE.md
examples/esp32c3_mqtt_server/: Cargo.toml
examples/esp32c3_mqtt_server/.cargo/: config.toml
examples/esp32c3_mqtt_server/certs/: cert.der  cert.pem  key.der  key.pem
examples/esp32c3_mqtt_server/src/: bootstrap.rs  main.rs  tls_support.rs  transport.rs
examples/rp2040_mqtt_server/: Cargo.toml  STAND_TESTS.md
examples/rp2040_mqtt_server/src/: main.rs  transport.rs
examples/tokio_mqtt_client/: Cargo.toml
examples/tokio_mqtt_server/: Cargo.toml
src/: config.rs  lib.rs  qos.rs  topics.rs  transport.rs
src/codec/: frame.rs
src/handler/: command.rs  connect.rs  connection.rs  disconnect.rs  mod.rs  pingreq.rs  publish.rs  subscribe.rs
src/router/: dispatcher.rs  mod.rs  retained.rs  subscriptions.rs
src/session/: mod.rs  notify.rs  rate_limit.rs  registry.rs  state.rs
src/tls/: mod.rs
src/transport/: tcp.rs  tls.rs
tools/: Run-ParallelTlsMqttConnect.ps1  Run-Tls13PskHandshake.ps1
tools/host_tls_mqtt_client/: CMakeLists.txt  tls_mqtt_client.c
tools/host_tls_psk_server/: Cargo.toml
tools/host_tls_psk_server/src/: main.rs
tools/tls-spike/: Cargo.toml  clienthello_full.hex  clienthello_prefix.hex  serverhello.hex
tools/tls-spike/src/: main.rs
