[package]
name = "GatoMQTT"
version = "0.2.0"
edition = "2021"
description = "no_std, no_alloc MQTT 3.1.1 broker library for embedded Rust. Bounded session registry, retained messages, QoS 1, transport-agnostic (plain TCP or TLS via TlsSession trait)."
license = "MIT"
homepage = "https://github.com/babasha/picobrokerTLS"
repository = "https://github.com/babasha/picobrokerTLS"
documentation = "https://docs.rs/GatoMQTT"
authors = ["Egor Babushkin <babushkin.e.ge@gmail.com>"]
keywords = ["mqtt", "broker", "embedded", "no-std", "iot"]
categories = ["network-programming", "embedded", "no-std"]
readme = "./README.md"

[features]
embassy-net = ["dep:embassy-net"]
# Server-mode TLS 1.3 PSK_KE adapter using the vendored GatoPSKTLS fork.
# Enables `crate::tls::embedded_tls_psk` which implements `TlsSession`.
tls-psk = ["dep:gatopsktls"]

[dependencies]
mqttrs = { version = "0.4", default-features = false }
heapless = "0.9"
heapless07 = { package = "heapless", version = "0.7.17" }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-futures = "0.1"
embassy-time = { version = "0.5" }
defmt = "1.0.1"
sha2 = { version = "0.10", default-features = false }
embassy-net = { version = "0.9", features = ["tcp", "proto-ipv4", "medium-ethernet"], optional = true }
# GatoPSKTLS — TLS 1.3 PSK_KE client + server (no_std).
# https://crates.io/crates/GatoPSKTLS
gatopsktls = { package = "GatoPSKTLS", version = "0.1", default-features = false, optional = true }

[dev-dependencies]
embassy-time = { version = "0.5", features = ["std", "generic-queue-8"] }
futures = "0.3"
critical-section = { version = "1.2", features = ["std"] }
