[package]
name = "esp32c3_mqtt_server"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
esp-rtos = { path = "../../third_party/esp-hal/esp-rtos" }
esp-hal = { path = "../../third_party/esp-hal/esp-hal" }
esp-alloc = { path = "../../third_party/esp-hal/esp-alloc" }
esp-backtrace = { path = "../../third_party/esp-hal/esp-backtrace" }
esp-println = { path = "../../third_party/esp-hal/esp-println" }
esp-radio = { path = "../../third_party/esp-hal/esp-radio" }
esp-bootloader-esp-idf = { path = "../../third_party/esp-hal/esp-bootloader-esp-idf" }
esp-metadata-generated = { path = "../../third_party/esp-hal/esp-metadata-generated" }

[dependencies]
gatomqtt = { package = "GatoMQTT", path = "../../crates/GatoMQTT", default-features = false }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-time = "0.5"
embassy-executor = "0.9"
embassy-futures = "0.1"
embassy-net = { version = "0.8", features = ["proto-ipv4", "tcp", "dhcpv4", "medium-ethernet"] }
defmt = "1.0.1"
embedded-io = "0.7"
mqttrs = { version = "0.4", default-features = false }
log = { version = "0.4", default-features = false }
rand_core = { version = "0.6", default-features = false }
gatopsktls = { package = "GatoPSKTLS", path = "../../crates/GatoPSKTLS", default-features = false, optional = true }
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable", "exception-handler", "log-04"] }
esp-backtrace = { version = "0.18.1", features = ["esp32c3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-metadata-generated = { version = "0.3", features = ["esp32c3"] }
esp-println = { version = "0.16.1", default-features = false, features = ["esp32c3", "uart", "defmt-espflash", "log-04"] }
esp-alloc = "0.9.0"
esp-radio = { version = "0.17.0", features = ["esp32c3", "wifi", "log-04", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["esp32c3", "embassy", "esp-radio"] }
static_cell = "2.1"
tinyrlibc = { version = "0.5", default-features = false, features = ["memchr"] }

[features]
default = []
# TLS 1.3 PSK_KE server using the vendored embedded-tls fork.
# (Replaces mbedtls-rs from prior versions of this example.)
tls = ["dep:gatopsktls", "gatomqtt/tls-psk"]

[profile.release]
opt-level = "z"

[profile.dev]
debug = true
opt-level = "z"

[workspace]
